<resources>
    <string name="app_name">Appfolio</string>
    <string name="main_title">My Nanodegree Apps!</string>
    <string name="app_1">Popular Movies</string>
    <string name="app_2">Stock Hawk</string>
    <string name="app_3">Build It Bigger</string>
    <string name="app_4">Make Your App Material</string>
    <string name="app_5">Go Ubiquitous</string>
    <string name="app_6">Capstone</string>
    <string name="open_app">Opens the app</string>
</resources>
