<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.hartley.myapplication.MainActivity"
    android:background="@android:color/holo_blue_dark"
    android:nestedScrollingEnabled="false"
    android:clickable="false">

    <TextView
        android:text="@string/main_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:minWidth="250dp"
        android:textColor="@android:color/black"
        android:textSize="25sp"
        android:id="@+id/textView" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_1"
        android:id="@+id/button"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:minWidth="250dp"
        android:onClick="sendMessage1" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_2"
        android:id="@+id/button2"
        android:minWidth="250dp"
        android:layout_below="@+id/button"
        android:layout_centerHorizontal="true"
        android:onClick="sendMessage2" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_3"
        android:id="@+id/button3"
        android:minWidth="250dp"
        android:layout_below="@+id/button2"
        android:layout_centerHorizontal="true"
        android:onClick="sendMessage3" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_4"
        android:id="@+id/button4"
        android:minWidth="250dp"
        android:layout_below="@+id/button3"
        android:layout_alignLeft="@+id/button3"
        android:layout_alignStart="@+id/button3"
        android:onClick="sendMessage4" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_5"
        android:id="@+id/button5"
        android:minWidth="250dp"
        android:layout_below="@+id/button4"
        android:layout_centerHorizontal="true"
        android:onClick="sendMessage5" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_6"
        android:id="@+id/button6"
        android:minWidth="250dp"
        android:layout_below="@+id/button5"
        android:layout_centerHorizontal="true"
        android:onClick="sendMessage6" />
</RelativeLayout>
